contact page is now in the home page and fixed some contrast issues

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -33,7 +33,7 @@
 
 .contact-h1 {
   text-align: center;
-  margin-top: 80px;
+  padding-top: 80px;
 }
 
 .contact-row {
