--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -65,6 +65,11 @@
   cursor: pointer;
 }
 
+.form-button:hover {
+  background: white;
+  color: #24285b;
+}
+
 @media screen and (max-width: 480px) {
   .form-container {
     height: 80%;
