--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -62,6 +62,10 @@
   margin-bottom: 16px;
 }
 
+.headline.light {
+  color: #24285b;
+}
+
 .title {
   margin-bottom: 24px;
   font-size: 48px;
